...
    CarsTheme {
        MakesScreen(
            uiState = MakesUiState(
                loadingState = MakesUiState.LoadingState.Success(
                    makes = persistentListOf(
                        Make(id = "1", "Toyota"),
                        Make(id = "2", "Ford"),
                        Make(id = "3", "Chevrolet")
                    )
                ),
                selectedYear = Year.TWENTY_FIFTEEN
            ),
            onMakeSelected = {},
...
