...
                    name = "Corolla",
                    makeId = "1"
                ),
                trims = listOf(
                    Trim(
                        id = "1",
                        description = "LE"
                    )
                )
            ),
            onClick = {},
            expanded = false,
            onTrimSelected = {}
...
